# zyte-mcp

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_client.py  test_stdio_integration.py  test_tools.py
zyte_mcp/: __init__.py  cli.py  client.py  config.py  errors.py  models.py  retries.py  scrapy_cloud_client.py  scrapy_cloud_config.py  scrapy_cloud_models.py  server.py
zyte_mcp/schema/: __init__.py  extractor.py  fetcher.py  merger.py  type_infer.py
zyte_mcp/schema/codegen/: __init__.py  attrs_.py  json_schema.py
zyte_mcp/tools/: __init__.py  browser.py  common.py  extraction.py  http.py  schema.py  scrapy_cloud_deploy.py  scrapy_cloud_jobs.py  scrapy_cloud_storage.py  search.py
