[project]
name = "zyte-mcp"
version = "0.1.0"
description = "Task-focused MCP server for Zyte API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.25",
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "scrapinghub[msgpack]>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
zyte-mcp = "zyte_mcp.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
]
